--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@faker-js/faker": "^8.3.1",
     "@mantine/core": "^8.3.5",
     "@mantine/dates": "^8.3.6",
     "@mantine/form": "^8.3.5",
     "@mantine/hooks": "^8.3.5",
+    "@mui/material": "^7.3.4",
     "@tabler/icons-react": "^3.35.0",
     "@tanstack/react-query": "^5.90.5",
     "@tanstack/react-virtual": "^3.13.12",
